
icon:plus[] Config: It is now possible to configure the path to the mesh lock file using the `MESH_LOCK_PATH` environment variable. link:https://github.com/gentics/mesh/issues/506[#506]

icon:plus[] It is now possible to add custom languages by configuration.

icon:check[] UI: Added a scrollbar to the schema dropdown menu. link:https://github.com/gentics/mesh-ui/pull/163[#163]

icon:check[] Core: A inconsistency within the webroot path handling has been fixed. Previously the webroot path uniqueness checks would not work correctly once another branch has been added.

icon:check[] REST: The response error code handling for uploads has been updated. Previously no error 413 was returned when the upload limit was reached.

icon:check[] Elasticsearch: The initial sync check will be omitted if no elasticsearch has been configured.

icon:check[] Java REST Client: fixed a bug that could lead to duplicate request headers.

[[v0.24.0]]
== 0.24.0 (25.07.2018)

CAUTION: The default value of `25` for the `perPage` parameter has been removed. By default all elements will be returned and no paging will be applied.

icon:check[] Core: A regression within the webroot performance enhancement fix of `0.23.0` has been fixed.

[[v0.23.0]]
== 0.23.0 (24.07.2018)

CAUTION: The breadcrumb of the REST node response and the breadcrumb of the node type in GraphQL has changed. The first element is now the root node of the project followed by its descendants including the currently queried node. Previously the order was reversed. Additionally the root node and the current were missing. link:https://github.com/gentics/mesh/issues/398[#398]

CAUTION: The concept of releases has been renamed into branches. The database structure will automatically be updated.

* The following query parameters have been changed: `release` -> `branch`,  `updateAssignedReleases` -> `updateAssignedBranches`, `updateReleaseNames` -> `updateBranchNames`
* The `releases` endpoint was renamed to `branches`.